@@ -1,6 +1,12 @@
+2004-08-15  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-item.c (gnome_wp_item_update_description):
+	Add "W x H pixels" to description, and remove file size
+	Mark the description string for translation as well
+
 2004-07-19  Rodney Dawes  <dobey@novell.com>
 
-	* gnome-wp-item.c (gnome_wp_remove_wallpaper, gnome_wp_list_sort):
+	* gnome-wp-capplet.c (gnome_wp_remove_wallpaper, gnome_wp_list_sort):
 	Free what we get with gtk_tree_model_get
 
 	Fixes #147403
